logs/modules-for-mozia.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/farfetch'...
Compiling './lib/python3.5/site-packages/farfetch/catalogs.py'...
***   File "./lib/python3.5/site-packages/farfetch/catalogs.py", line 65
    print "begin url:", page_url
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/farfetch/covers.py'...
***   File "./lib/python3.5/site-packages/farfetch/covers.py", line 13
    print "download image:", url
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/farfetch/images.py'...
***   File "./lib/python3.5/site-packages/farfetch/images.py", line 30
    print 'Network conditions is not good.Reloading.', url
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/farfetch/monitor.py'...
***   File "./lib/python3.5/site-packages/farfetch/monitor.py", line 18
    print "Have task in queue:", task_length
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/farfetch/network.py'...
***   File "./lib/python3.5/site-packages/farfetch/network.py", line 18
    print 'Network conditions is not good.Reloading.', url
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/farfetch/products.py'...
***   File "./lib/python3.5/site-packages/farfetch/products.py", line 60
    print "product sold out:", link
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/farfetch/repository.py'...
***   File "./lib/python3.5/site-packages/farfetch/repository.py", line 24
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/farfetch/task.py'...
***   File "./lib/python3.5/site-packages/farfetch/task.py", line 16
    print "create product tasks:", task["url"]
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/farfetch/trace_tools.py'...
***   File "./lib/python3.5/site-packages/farfetch/trace_tools.py", line 48
    print splices2[0], "<--->", url
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/farfetch/transmitter.py'...
***   File "./lib/python3.5/site-packages/farfetch/transmitter.py", line 123
    print "save product description:", description
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/modules'...
Listing './lib/python3.5/site-packages/modules_for_mozia-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/redis_py_cluster-1.3.4.dist-info'...
Listing './lib/python3.5/site-packages/rediscluster'...
Listing './lib/python3.5/site-packages/scheduler'...
Compiling './lib/python3.5/site-packages/scheduler/scheudler.py'...
***   File "./lib/python3.5/site-packages/scheduler/scheudler.py", line 18
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tools'...
Listing './share'...
Listing './share/python-wheels'...
